FELIX-5504 : Switch from org.json to new simple json writer
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1780102 13f79535-47bb-0310-9956-ffa450edef68